--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
 body {
   font-family: "Open Sans Condensed";
   padding: 20px 80px;
+
+  
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+*{
+  box-sizing: border-box;
 }
